# vulkan-object

./: .gitignore  Cargo.toml  LICENSE  README.md  generate.py  generate_schema.py  requirements.txt
src/: lib.rs  schema.rs  vulkan_object.rs
