[package]
name = "vulkan-object"
version = "0.2.0+1.4.341"
authors = ["Christopher Probst-Ranly"]
edition = "2024"
description = "Rust bindings for vulkan-object, providing typed access to Vulkan API metadata."
readme = "README.md"
repository = "https://github.com/rust-bindings/vulkan-object"
license = "MIT"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_repr = "0.1"
indexmap = { version = "2", features = ["serde"] }
