[package]
name = "hyperthrust-vulkan-object"
version = "0.7.0+1.4.342"
edition = "2024"
authors = ["Christopher Probst-Ranly"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/hyperthrust/vulkan-object"
description = "Rust bindings for vulkan-object, providing typed access to Vulkan API metadata."

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_repr = "0.1"
indexmap = { version = "2", features = ["serde"] }
